# sillychess

./: README.md
amichess/src/: amichess.c  amichess.h  board.c  move.c  move.h  search.c
sillychess/: .cproject  .gitignore  .project  CMakeLists.txt
sillychess/src/: ChangeLog  Makefile  board.c  eval.c  hash.c  move.c  move.h  perfomanceHistory.txt  rkiss.c  search.c  sillychess.c  sillychess.h  time.c  transpositiontable.c  transpositiontable.h  uci.c
sillychess/src/windows_res/: sc.rc
src/: amichess.h  board.c  move.c  move.h  perfsuite.epd  time.c  uci.c
